--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: "Montserrat", serif;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -10,8 +11,25 @@ body {
 .home-container {
   padding: 10px;
   width: 100%;
-  height: 100vh;
   background: #ffd4d0;
+  position: relative;
+}
+
+.circle {
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  width: 100px;
+  height: 100px;
+  background: #fc3314;
+  border-radius: 50%;
+  z-index: 0;
+}
+
+.main-header {
+  position: relative;
+  z-index: 1;
+  text-align: center; /* Center the content in the header */
 }
 
 .main-nav ul {
@@ -19,6 +37,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .main-nav a {
   text-decoration: none;
   color: #1f1f1f;
@@ -30,23 +49,83 @@ body {
   color: #fc3314;
 }
 .rectangular-button {
-  width: 127px;
-  height: 48px;
+  width: 100%; /* Take full width on smaller screens */
+  margin-bottom: 10px; /* Add space between buttons */
+
   background: #000;
   color: #fff;
-  font-family: Montserrat, sans-serif;
   font-size: 16px;
   font-weight: 700;
   cursor: pointer;
   border: none;
 }
 
+.border-button {
+  width: 100%; /* Take full width on smaller screens */
+  margin-bottom: 10px; /* Add space between buttons */
+
+  background: #fff;
+  border: 1px Solid #000;
+  font-size: 16px;
+  font-weight: 700;
+  cursor: pointer;
+}
 .rectangular-button:hover {
-  background: #525151;
+  background: #565353;
+}
+
+.border-button:hover {
+  background: #cecbcb;
+}
+
+.container {
+  flex-direction: column;
+}
+.left-main-body .subtitle {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  word-wrap: break-word;
+}
+
+.left-main-body .highlight {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 72px;
+  word-wrap: break-word;
+}
+
+.left-main-body .name {
+  color: #fc3314;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 72px;
+  word-wrap: break-word;
+}
+.description {
+  color: #1f1f1f;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  word-wrap: break-word;
+}
+
+.left-main-body,
+.right-main-body {
+  width: 100%;
+}
+
+.left-main-body,
+.right-main-body img {
+  width: 100%; /* Make images responsive */
+  height: auto;
 }
 
 /* Media query for desktop view */
 @media screen and (min-width: 768px) {
+  .home-container {
+    height: 100vh;
+  }
   .main-header {
     align-items: center;
     justify-content: space-around;
@@ -61,5 +140,34 @@ body {
     margin-right: 20px;
     margin-bottom: 0;
     display: inline-block;
+  }
+
+  .main-body-container {
+    display: flex;
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  .left-main-body {
+    flex: 1;
+    padding: 20px;
+  }
+
+  .right-main-body {
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 100%;
+  }
+
+  .rectangular-button,
+  .border-button {
+    width: 127px;
+    height: 48px;
   }
 }
