--- a/css/main.css
+++ b/css/main.css
@@ -81,21 +81,34 @@ body {
 .container {
   flex-direction: column;
 }
-.left-main-body .subtitle {
-  font-size: 20px;
+.subtitle {
+  font-size: 16px;
   font-weight: 400;
   line-height: 30px;
   word-wrap: break-word;
 }
+.white {
+  color: #fff;
+}
+.centeredText {
+  text-align: center;
+}
 
-.left-main-body .highlight {
+.centeredContainer {
+  width: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  text-align: justify;
+}
+
+.highlight {
   font-size: 48px;
   font-weight: 700;
   line-height: 72px;
   word-wrap: break-word;
 }
 
-.left-main-body .name {
+.name {
   color: #fc3314;
   font-size: 48px;
   font-weight: 700;
@@ -121,10 +134,80 @@ body {
   height: auto;
 }
 
+.right-main-body img {
+  filter: drop-shadow(5px 5px 10px #b94848);
+}
+
+/* ABOUT-SERVICE-WRAPPER-CONTAINER */
+
+.about-me-container {
+  background-color: #000;
+  padding-bottom: 25px;
+}
+
+.number {
+  color: #ffd4d0;
+  font-size: 60px;
+  font-weight: 700;
+  padding: 0;
+  margin: 0;
+}
+
+.desc {
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+  padding: 0;
+  margin: 0;
+}
+.exp-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.black {
+  color: black;
+}
+
+.numbers-represented-container {
+  text-align: center;
+  margin: 10px;
+}
+footer {
+  background-color: #000000;
+  color: #fff;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
+.social-icons li {
+  margin: 0 10px;
+}
+
+.social-icons a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+
 /* Media query for desktop view */
 @media screen and (min-width: 768px) {
-  .home-container {
-    height: 100vh;
+  footer {
+    flex-direction: row;
   }
   .main-header {
     align-items: center;
@@ -169,5 +252,19 @@ body {
   .border-button {
     width: 127px;
     height: 48px;
+  }
+  .centeredContainer {
+    width: 60%;
+    margin: 0 auto;
+    padding: 0;
+    margin-bottom: 25px;
+  }
+  .exp-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .numbers-represented-container {
+    flex: 1;
   }
 }
